--- a/main/style.css
+++ b/main/style.css
@@ -5,42 +5,30 @@
     padding: 0;
 }
 
-.container {
-    width: 100%;
-    height: 100vh;
-    display: flex;
-}
-
-.header {
-    width: 100%;
+header {
     display: flex;
     justify-content: space-around;
-    height: 100vh;
-    /* background-image: url(../Images/1.png); */
-    /* background-size: cover; */
-
+    position: sticky;
+    background-color: rgb(50, 134, 207);
 }
 
 .logo {
-    width: 100px;
-    height: 100px;
-    margin: 20px;
-    background-color: black;
+    margin: 30px;
+    position: relative;
 }
 
-.logo img{
-    width: 100%;
-    height: 100%;
-
-}
-
-.logo a{
+.logo a {
     text-decoration: none;
+    font-size: larger;
+}
+
+.logo a:hover {
+    color: #c4dd68;
 }
 
 .nav {
     display: flex;
-
+    margin: 16px;
 }
 
 .nav ul {
@@ -51,18 +39,53 @@
 .nav ul li {
     list-style-type: none;
     text-decoration: none;
-    padding: 20px;
-    color: #fff;
+    padding: 20px 26px;
+    font-size: 1.4rem;
 }
 
 .nav ul li a {
     text-decoration: none;
-
 }
 
-.text{
-    width: 100%;
-    height: 100vh;
-
+.nav ul li a:hover {
+    color: #98ce42;
 }
 
+.main {
+    background: #912929;
+}
+
+.footer {
+    background-color: #333;
+    color: white;
+    padding: 20px 0;
+    text-align: center;
+}
+
+.footer .footer-content {
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+.footer .social-links {
+    list-style-type: none;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+}
+
+.footer .social-links li {
+    display: inline;
+}
+
+.footer .social-links a {
+    color: white;
+    font-size: 24px;
+    text-decoration: none;
+    transition: color 0.3s ease;
+}
+
+.footer .social-links a:hover {
+    color: #1da1f2;
+}
