--- a/main/style.css
+++ b/main/style.css
@@ -4,10 +4,8 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    /* font-family: 'Montserrat', sans-serif; */
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     line-height: 1.6;
-    /* background-image: url('https://images.pexels.com/photos/3182781/pexels-photo-3182781.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1'); */
 }
 
 header {
@@ -15,9 +13,6 @@ header {
     justify-content: space-around;
     align-items: center;
     padding: 0 20px;
-    /* background-color: #85FFBD;
-    background-image: linear-gradient(45deg, #85FFBD 0%, #FFFB7D 100%); */
-    /* position: sticky; */
 }
 
 .logo {
@@ -28,16 +23,6 @@ header {
     height: 100px;
     width: 100px;
 }
-
-/* .logo a {
-    text-decoration: none;
-    font-size: 2rem;
-    color: black;
-}
-
-.logo a:hover {
-    color: #c4dd68;
-} */
 
 .nav {
     display: flex;
@@ -63,9 +48,7 @@ header {
     color: #98ce42;
 }
 
-.home,
-.services,
-.contact {
+.home, .services, .contact {
     padding: 50px 20px;
     display: flex;
     flex-wrap: wrap;
@@ -83,20 +66,9 @@ header {
     color: #007bff;
 }
 
-/* .about h2{
-    display: flex;
-    justify-content: center;
-    }
-    
-    .about {
-        background: #cfbc7e;
-        color: #1a1a1a;
-        } */
-
 .about-section {
     justify-content: space-evenly;
     padding: 50px;
-    /* background: #daeb7e; */
 }
 
 .about-section h1 {
@@ -112,32 +84,6 @@ header {
 
 .about-section p {
     margin-bottom: 20px;
-}
-
-.expertise-why {
-    display: flex;
-    justify-content: space-between;
-    gap: 20px;
-}
-
-.expertise,
-.why-choose-us {
-    flex: 1;
-    padding: 10px;
-    background: #f5d9d9;
-    border-radius: 5px;
-}
-
-.why-choose-us ul {
-    list-style-type: none;
-    padding: 0;
-}
-
-.why-choose-us ul li {
-    background: #f7a3a3;
-    margin: 5px 0;
-    padding: 10px;
-    border-radius: 5px;
 }
 
 .team-cards {
@@ -196,7 +142,7 @@ header {
     align-items: center;
 }
 
-.heading {
+.service-heading {
     font-size: 3rem;
     padding: 35px 0;
     color: #333;
@@ -252,7 +198,6 @@ h3 {
     font-size: 2rem;
     justify-content: center;
     align-items: center;
-    /* font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; */
 }
 
 .contact .our_details {
@@ -260,259 +205,115 @@ h3 {
     font-size: larger;
 }
 
-/* .contact .contact_form  */
 .contact .our_details {
     width: 100%;
     max-width: 600px;
 }
 
-/* .contact form {
-    display: flex;
-    flex-direction: column;
-}
-
-.contact form label {
-    margin-top: 10px;
-}
-
-.contact form input {
-    padding: 10px;
-    margin-top: 5px;
-    border-radius: 5px;
-    border: 1px solid #ccc;
-}
-
-.contact form button {
-    margin-top: 20px;
-    padding: 10px;
-    background-color: #333333;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-}
-
-.contact form button:hover {
-    background-color: #555;
-} */
-
-
-input:focus ~ label,textarea:focus ~ label,input:valid ~ label,textarea:valid ~ label {
-	font-size: 0.75em;
-	color: #999;
-	top: -5px;
-	-webkit-transition: all 0.225s ease;
-	transition: all 0.225s ease;
+input:focus~label, textarea:focus~label, input:valid~label, textarea:valid~label {
+    font-size: 0.75em;
+    color: #999;
+    top: -5px;
+    -webkit-transition: all 0.225s ease;
+    transition: all 0.225s ease;
 }
 
 .styled-input {
-	float: left;
-	width: 293px;
-	margin: 1rem 0;
-	position: relative;
-	border-radius: 4px;
+    float: left;
+    width: 293px;
+    margin: 1rem 0;
+    position: relative;
+    border-radius: 4px;
 }
 
 @media only screen and (max-width: 768px) {
-	.styled-input {
-		width: 100%;
-	}
+    .styled-input {
+        width: 100%;
+    }
 }
 
 .styled-input label {
-	color: #999;
-	padding: 1.3rem 30px 1rem 30px;
-	position: absolute;
-	top: 10px;
-	left: 0;
-	-webkit-transition: all 0.25s ease;
-	transition: all 0.25s ease;
-	pointer-events: none;
+    color: #999;
+    padding: 1.3rem 30px 1rem 30px;
+    position: absolute;
+    top: 10px;
+    left: 0;
+    -webkit-transition: all 0.25s ease;
+    transition: all 0.25s ease;
+    pointer-events: none;
 }
 
 .styled-input.wide {
-	width: 650px;
-	max-width: 100%;
+    width: 650px;
+    max-width: 100%;
 }
 
 input, textarea {
-	padding: 30px;
-	border: 0;
-	width: 100%;
-	font-size: 1rem;
-	background-color: #2d2d2d;
-	color: white;
-	border-radius: 4px;
+    padding: 30px;
+    border: 0;
+    width: 100%;
+    font-size: 1rem;
+    background-color: #2d2d2d;
+    color: white;
+    border-radius: 4px;
 }
 
 input:focus, textarea:focus {
-	outline: 0;
+    outline: 0;
 }
 
-input:focus ~ span, textarea:focus ~ span {
-	width: 100%;
-	-webkit-transition: all 0.075s ease;
-	transition: all 0.075s ease;
+input:focus~span, textarea:focus~span {
+    width: 100%;
+    -webkit-transition: all 0.075s ease;
+    transition: all 0.075s ease;
 }
 
 textarea {
-	width: 100%;
-	min-height: 15em;
+    width: 100%;
+    min-height: 15em;
 }
 
 .input-container {
-	width: 650px;
-	max-width: 100%;
-	margin: 20px auto 25px auto;
+    width: 650px;
+    max-width: 100%;
+    margin: 20px auto 25px auto;
 }
 
 .submit-btn {
-	padding: 7px 35px;
-	border-radius: 60px;
-	display: inline-block;
-	background-color: #4b8cfb;
-	color: white;
-	font-size: 18px;
-	cursor: pointer;
-	box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.06), 0 2px 10px 0 rgba(0, 0, 0, 0.07);
-	-webkit-transition: all 300ms ease;
-	transition: all 300ms ease;
+    padding: 7px 35px;
+    border-radius: 60px;
+    display: inline-block;
+    background-color: #4b8cfb;
+    color: white;
+    font-size: 18px;
+    cursor: pointer;
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.06), 0 2px 10px 0 rgba(0, 0, 0, 0.07);
+    -webkit-transition: all 300ms ease;
+    transition: all 300ms ease;
 }
 
 .submit-btn:hover {
-	transform: translateY(1px);
-	box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.1), 0 1px 1px 0 rgba(0, 0, 0, 0.09);
+    transform: translateY(1px);
+    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.1), 0 1px 1px 0 rgba(0, 0, 0, 0.09);
 }
 
 @media (max-width: 768px) {
-	.submit-btn {
-		width: 100%;
-		float: none;
-		text-align: center;
-	}
-}
-
-input[type="checkbox"] + label {
-	color: #ccc;
-	font-style: italic;
-}
-
-input[type="checkbox"]:checked + label {
-	color: #f00;
-	font-style: normal;
-}
-
-/* .footer {
-    background-color: #333;
-    color: #fff;
-    padding: 40px 0;
-    font-family: Arial, sans-serif;
-}
-
-.footer-content {
-    display: flex;
-    justify-content: space-evenly;
-    margin: 0 auto;
-    padding: 0 20px;
-    align-items: flex-start;
-    max-width: 1200px;
-}
-
-.footer-left {
-    flex: 1;
-}
-
-.footer-logo img {
-    width: 100px;
-    margin-bottom: 20px;
-}
-
-.footer-description {
-    margin-bottom: 20px;
-    font-size: 1.5rem;
-}
-
-.footer-right {
-    flex: 2;
-    text-align: right;
-    padding: 90px 0;
-}
-
-.social-links {
-    list-style: none;
-    padding: 0;
-    display: flex;
-    justify-content: flex-end;
-    gap: 1.3rem;
-    margin-bottom: 20px;
-}
-
-.social-links a {
-    font-size: 20px;
-    text-decoration: none;
-    transition: transform 0.3s ease;
-}
-
-.social-links .facebook {
-    color: #3b5998;
-}
-
-.social-links .twitter {
-    color: #1da1f2;
-}
-
-.social-links .instagram {
-    color: #e4405f;
-}
-
-.social-links .linkedin {
-    color: #0077b5;
-}
-
-.social-links .youtube {
-    color: #ff0000;
-}
-
-.social-links a:hover {
-    transform: scale(1.1);
-}
-
-.footer-links {
-    margin-top: 20px;
-    display: flex;
-    justify-content: flex-end;
-    gap: 15px;
-}
-
-.footer-link {
-    color: #fff;
-    text-decoration: none;
-    transition: color 0.3s ease;
-    font-size: larger;
-}
-
-.footer-link:hover {
-    color: #ff9800;
-}
-
-
-@media (max-width: 768px) {
-    .footer-content {
-        flex-direction: column;
-        align-items: center;
-    }
-    
-    .footer-left,
-    .footer-right {
+    .submit-btn {
+        width: 100%;
+        float: none;
         text-align: center;
     }
-    
-    .social-links,
-    .footer-links {
-        justify-content: center;
-    }
-} */
+}
 
+input[type="checkbox"]+label {
+    color: #ccc;
+    font-style: italic;
+}
+
+input[type="checkbox"]:checked+label {
+    color: #f00;
+    font-style: normal;
+}
 
 footer {
     background-color: #383636;
@@ -544,7 +345,6 @@ footer {
     font-size: 14px;
 }
 
-/* Change icon color based on app color */
 .social-icons a i {
     transition: color 0.3s ease;
 }
