--- a/main/style.css
+++ b/main/style.css
@@ -49,7 +49,7 @@ header {
 .home {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-items: center;
     /* background-color: #f7f7f7; */
     padding: 50px 20px;
@@ -274,7 +274,7 @@ h3 {
 } */
 
 footer {
-    background-color: #333;
+    background-color: #424242;
     color: #fff;
     padding: 20px 0;
     text-align: center;
@@ -331,7 +331,7 @@ footer {
 }
 
 .social-icons a:hover {
-    color: #007BFF;
+    color: #e9b833d3;
 }
 
 .contact-container {
@@ -379,15 +379,15 @@ footer {
     width: 150px; /* Adjust the width of the button */
     border: none;
     border-radius: 5px;
-    background-color: #007BFF;
+    background-color: #FF5733;
     color: #fff;
     cursor: pointer;
     align-self: flex-end; /* Align the button to the right */
 }
 
-#contact-form button:hover {
-    background-color: #0056b3;
-}
+/* #contact-form button:hover {
+    background-color: #FF5733;
+} */
 
 .footer-bottom {
     margin-top: 20px;
